--- a/res/values/everest_strings.xml
+++ b/res/values/everest_strings.xml
@@ -74,4 +74,8 @@
     <!-- Base Camp -->
     <string name="basecamp_dash_title">Everest Basecamp</string>
     <string name="basecamp_summary">Height of Customization!!</string>
+
+    <!-- Density category -->
+    <string name="density_category">Density options</string>
+
 </resources>
