--- a/res/values/everest_strings.xml
+++ b/res/values/everest_strings.xml
@@ -67,4 +67,7 @@
 
     <!-- Summary for list to control apps that ignore battery saving restrictions -->
     <string name="high_power_apps_summary">Battery optimization availability</string>
+
+    <!-- Radio Info -->
+    <string name="radio_info_title">Radio info</string>
 </resources>
