--- a/res/layout/custom_dashboard_top.xml
+++ b/res/layout/custom_dashboard_top.xml
@@ -11,19 +11,19 @@
  <com.google.android.material.card.MaterialCardView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
-         app:cardElevation="0dp"             
-         app:cardCornerRadius="28dp"
-         app:strokeColor="?android:attr/textColorPrimary"
-         app:strokeWidth="2dp">
+         app:cardElevation="0dp"
+         app:cardCornerRadius="28dp">
 
-        <com.android.settings.WallpaperView
+        <com.radiant.utils.bannerHeaderView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:elevation="0dp"
             android:gravity="center"
-            android:foreground="#6B000000"
-            android:orientation="vertical"/>
+            android:elevation="0dp"
+            android:foreground="@drawable/wallpaper_scrim"
+            android:background="@drawable/wallpaper_scrim"
+            android:contentDescription="@null"
+            android:orientation="horizontal" />
 
     <LinearLayout
         android:gravity="center"
