Settings: Add BaseCamp to dashboard
Change-Id: Ie18a29e62a651b4b5c74510493dc291135f5361c

--- a/res/values/everest_strings.xml
+++ b/res/values/everest_strings.xml
@@ -70,4 +70,8 @@
 
     <!-- Radio Info -->
     <string name="radio_info_title">Radio info</string>
+
+    <!-- Base Camp -->
+    <string name="basecamp_dash_title">Everest Basecamp</string>
+    <string name="basecamp_summary">Height of Customization!!</string>
 </resources>
