--- a/res/layout/everest_cardview_single_left.xml
+++ b/res/layout/everest_cardview_single_left.xml
@@ -1,57 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (C) 2023 Blaze OS Project
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
-  <LinearLayout
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="160.0dip"
+    android:layout_marginStart="16.0dip"
+    android:layout_marginTop="4.0dip"
+    android:layout_marginEnd="5.0dip"
+    android:layout_marginBottom="4.0dip"
+    android:background="@drawable/everest_card"
     android:gravity="start|center"
     android:orientation="vertical"
-    android:background="@drawable/cardview_single"
     android:padding="16.0dip"
-    android:layout_width="fill_parent"
-    android:layout_height="130.0dip"
-    android:layout_marginTop="10.0dip"
-    android:layout_marginBottom="10.0dip"
-    android:layout_marginStart="16.0dip"
-    android:layout_marginEnd="5.0dip"
     android:scrollbarThumbHorizontal="@android:color/transparent"
-    android:scrollbarThumbVertical="@android:color/transparent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:scrollbarThumbVertical="@android:color/transparent">
+
     <ImageView
         android:id="@android:id/icon"
-        android:padding="8.0dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:tint="?android:attr/colorAccent"
-        android:backgroundTint="?android:colorPrimary" />
+        android:layout_gravity="center"
+        android:backgroundTint="?android:colorPrimary"
+        android:padding="8.0dip"
+        android:tint="?android:attr/colorAccent" />
+
     <TextView
-        android:textSize="18.0sp"
-        android:textColor="?android:textColorPrimary"
-        android:ellipsize="end"
-        android:gravity="start|center"
         android:id="@android:id/title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10.0dip" />
-    <TextView
-        android:textSize="14.0sp"
-        android:textColor="?android:textColorSecondary"
+        android:layout_gravity="center"
+        android:layout_marginTop="10.0dip"
         android:ellipsize="end"
-        android:gravity="start"
+        android:gravity="center"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="18.0sp" />
+
+    <TextView
         android:id="@android:id/summary"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:textColor="?android:textColorSecondary"
+        android:textSize="14.0sp" />
 </LinearLayout>
