--- a/res/drawable/everest_card.xml
+++ b/res/drawable/everest_card.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/abt_crd"/>
+    <solid android:color="@color/user_crd_bg"/>
        <stroke android:width="2dp" android:color="@color/settingslib_text_color_primary_device_default" />
           <corners
                 android:topRightRadius="28dp"
