--- a/res/layout/top_about_blur.xml
+++ b/res/layout/top_about_blur.xml
@@ -1,83 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/syberia_card"
     android:layout_width="match_parent"
-    android:layout_height="174dp"
-    android:elevation="0dp"
+    android:layout_height="225dp"
     android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="10dp">
+    android:layout_marginVertical="10dp"
+    android:background="@drawable/syberia_card"
+    android:elevation="0dp">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="24dp">
+        app:cardCornerRadius="24dp"
+        app:cardElevation="0dp">
 
-            <com.everest.utils.BlurWallpaperView
+        <com.everest.utils.BlurWallpaperView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
             android:elevation="0dp"
             android:gravity="center"
-            android:orientation="vertical"/>
+            android:orientation="vertical"
+            android:scaleType="centerCrop" />
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp">
-
-       	<RelativeLayout
-            android:layout_width="0.0dip"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="1.0"
-            android:layout_marginEnd="10dp">
-            <TextView
-                android:ellipsize="marquee"
-                android:id="@android:id/summary"
-                android:fadingEdge="horizontal"
+            android:layout_marginHorizontal="10dp"
+            android:orientation="horizontal">
+
+            <com.google.android.material.card.MaterialCardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="64.0dip"
-                android:textAlignment="center"
-                android:background="@drawable/homepage_text_bg"
-            	android:paddingHorizontal="8dp"
-            	android:paddingVertical="2dp"
-                android:singleLine="true"
-                android:textColor="#000000"
-                style="@style/op_control_text_style_h6" />
-        </RelativeLayout>
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                app:cardBackgroundColor="#00000000"
+                app:cardElevation="0dp">
 
-     <com.google.android.material.card.MaterialCardView
-            android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    app:cardBackgroundColor="#00000000"
-	    app:cardElevation="0dp">
-
-        <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/about_phone_header_illustration"
-                    android:layout_width="107dp"
-                    android:layout_height="300dp"
-                    android:layout_marginTop="18dp"
-                    android:scaleType="fitCenter"
-                    app:cardCornerRadius="14dp"
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/phone_image"
+                    android:layout_width="100dp"
+                    android:layout_height="205dp"
+                    android:layout_centerVertical="true"
+                    app:cardCornerRadius="18dp"
                     app:cardElevation="0dp"
                     app:strokeColor="?android:attr/textColorPrimary"
                     app:strokeWidth="3dp">
 
-                    	<com.android.utils.aboutWallpaperView
+                    <com.android.utils.aboutWallpaperView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
+                        android:contentDescription="@null"
                         android:elevation="0dp"
                         android:gravity="center"
-                        android:orientation="vertical" />
-    </com.google.android.material.card.MaterialCardView>                        
-       </com.google.android.material.card.MaterialCardView>                 
-    </LinearLayout>
+                        android:orientation="vertical"
+                        android:scaleType="centerCrop" />
+                </com.google.android.material.card.MaterialCardView>
+            </com.google.android.material.card.MaterialCardView>
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1.0">
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/welcome_lottie"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:scaleType="centerInside"
+                    app:lottie_autoPlay="true"
+                    app:lottie_colorFilter="?android:attr/colorAccent"
+                    app:lottie_loop="true"
+                    app:lottie_rawRes="@raw/welcome_lottie" />
+            </RelativeLayout>
+        </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 </FrameLayout>
